# MusicalEmergence

./: .gitignore  README.md  synchrony.jucer
Builds/MacOSX/: AudioParticle.cpp  AudioParticle.hpp  Info-AU.plist  Info-Standalone_Plugin.plist  Info-VST3.plist  MidiParticle.cpp  MidiParticle.hpp  Particle.cpp  Particle.hpp  ParticleManager.cpp  ParticleManager.hpp  Physics.cpp  Physics.hpp  Utilities.hpp
Builds/MacOSX/synchrony-tests/: test_main.cpp  test_plugin.cpp
Builds/MacOSX/synchrony.xcodeproj/: project.pbxproj
Builds/MacOSX/synchrony.xcodeproj/project.xcworkspace/xcuserdata/andreworals.xcuserdatad/: UserInterfaceState.xcuserstate
Builds/MacOSX/synchrony.xcodeproj/xcshareddata/xcschemes/: synchrony-tests.xcscheme
Builds/MacOSX/synchrony.xcodeproj/xcuserdata/andreworals.xcuserdatad/xcschemes/: xcschememanagement.plist
JuceLibraryCode/: JuceHeader.h  JucePluginDefines.h
Source/: CustomUnitTestRunner.h  Particle.cpp  Particle.h  ParticleManager.cpp  ParticleManager.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SynchronySettings.cpp  SynchronySettings.h  TestParticleManager.h  Utilities.h  test_main.cpp  test_plugin.cpp  tests.h
Test/: CMakeLists.txt
